fix: align tree node elements vertically, unify hover effect
- Reduce mat-icon-button to 32px in tree nodes for consistent alignment
- Use line-height + vertical-align for text/icon/button centering
- Restore mat-icon-button wrapper for selection icon (consistent hover)
- Change selected check_circle color to red (var(--mat-sys-error))
- Update dialog memory docs

--- a/src/app/components/acl-management/add-ace-dialog/add-ace-dialog.component.scss
+++ b/src/app/components/acl-management/add-ace-dialog/add-ace-dialog.component.scss
@@ -112,8 +112,35 @@
   display: block;
 }
 
+.ace-form__tree-node > div {
+  line-height: 32px;
+}
+
+.ace-form__tree-node > div > * {
+  vertical-align: middle;
+}
+
 .ace-form__tree-node .ace-form__tree-node {
   padding-left: 40px;
+}
+
+.ace-form__tree-node button.mat-mdc-icon-button {
+  height: 32px;
+  width: 32px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  vertical-align: middle;
+}
+
+.ace-form__tree-node button.mat-mdc-icon-button .mat-icon {
+  font-size: 18px;
+  width: 18px;
+  height: 18px;
+}
+
+.selected button.mat-mdc-icon-button .mat-icon {
+  color: var(--mat-sys-error);
 }
 
 .ace-form__checkbox-row {
